# maya-usd

./: CMakeLists.txt  build.py  merge_pixar.bash
cmake/: utils.cmake
cmake/defaults/: CXXDefaults.cmake
doc/: DEVELOPER.md
lib/: CMakeLists.txt
lib/base/: debugCodes.cpp  debugCodes.h
lib/fileio/: registryHelper.cpp  registryHelper.h  writeJobContext.cpp  writeJobContext.h
lib/fileio/jobs/: jobArgs.cpp  jobArgs.h  writeJob.cpp
lib/fileio/translators/: translatorImagePlane.cpp  translatorImagePlane.h  translatorUtil.cpp  translatorXformable.cpp
lib/fileio/utils/: userAttributeWriterRegistry.cpp  userAttributeWriterRegistry.h  writeUtil.cpp
lib/nodes/: proxyShapeBase.cpp
lib/python/: wrapXformStack.cpp
lib/render/mayaToHydra/: renderGlobals.cpp  renderOverride.cpp  utils.cpp  utils.h
lib/usd/hdMaya/: CMakeLists.txt  utils.h
lib/usd/hdMaya/adapters/: imagePlaneAdapter.cpp  imagePlaneMaterialAdapter.cpp  materialAdapter.cpp  materialNetworkConverter.cpp  proxyAdapter.cpp  tokens.h
lib/usd/translators/: CMakeLists.txt  imagePlaneReader.cpp  imagePlaneWriter.cpp  imagePlaneWriter.h  lightWriter.cpp  lightWriter.h  meshWriter.cpp  meshWriter.h  meshWriter_Primvars.cpp  plugInfo.json
lib/utils/: util.cpp
plugin/al/: CMakeLists.txt
plugin/al/lib/AL_USDMaya/: CMakeLists.txt
plugin/al/lib/AL_USDMayaUFE/: usdRunTime.py  usdSubject.py  usdXformOpCmds.py
plugin/al/plugin/AL_USDMayaPlugin/: CMakeLists.txt
plugin/al/translators/: CMakeLists.txt
test/lib/: CMakeLists.txt
test/lib/ufe/: CMakeLists.txt
test/lib/usd/schemas/: CMakeLists.txt
(+62 files in other folders)
